# AnyScrape

./: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  check_versions.py  docker-compose.yml  pyproject.toml  requirements.txt  test_ddg.py  test_ddgs_direct.py
anyscrape/: __init__.py  cli.py  config.py  llm.py  logging_utils.py  memory_store.py  orchestrator.py  web_app.py
anyscrape/agents/: __init__.py  crawl_agent.py  decision_agent.py  search_agent.py  synthesis_agent.py
searxng/: limiter.toml  settings.yml
